--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 
@@ -16,12 +16,12 @@
     <div class="navbar">
         <div class="container flex">
           <!--double check to make sure that the link works-->
-            <h3><a class="link" href="/home.html">I'm Sherry Xue</a></h3>
+            <h3><a class="link" href="home.html">I'm Sherry Xue</a></h3>
             <nav>
                 <ul>
-                    <li><a class="link" href="/home.html">Home </a></li>
-                    <li><a class="link" href="/home.html#projects">Projects</a></li>
-                    <li><a class="link" href="Sherryresume.pdf" target="_blank">CV</a></li>
+                    <li><a class="link" href="home.html">Home </a></li>
+                    <li><a class="link" href="home.html#projects">Projects</a></li>
+                    <li><a class="link" href="Sherry_xue_resume.pdf" target="_blank">Resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -42,11 +42,11 @@
                 <p class="bold mt big text-2">"It's kind of fun to do the impossible"</p>
 
                 <p class="mt small">
-                    📍Northwestern university:
+                    📍Northwestern University
                 </p>
 
                 <p class="mt small">
-                   🌏Made in China. Trilingual. Aspire to be a world citizen
+                   🌏Made in China. Trilingual. Aspire to be a world citizen.
                 </p>
 
                 <p class="mt small">
@@ -73,9 +73,9 @@
         <div class="container grid">
             <div class="about-img">
                 <img src="./img/IMG_2250.jpeg" alt="about image">
-                <h3 class="text-center">Thank you for stopping by</h3>
+                <h3 class="text-center">Thank you for stopping by!</h3>
                 <h3 class="text-center">Lets connect!</h3>
-                <a href="Sherryresume.pdf" target="_blank">See Full CV</a>
+                <a href="Sherry_xue_resume.pdf" target="_blank">View Resume</a>
             </div>
 
             <div class="about-me-text">
@@ -83,7 +83,7 @@
                     <p class="text">I enjoy collaborating and find different team dynamics exciting. I love learning from others</p>
                 <p class="bold mt big text-2">I'm adaptable.</p>
                     <p class="text">
-                        I like to make myself ueful and help out wherever needed!
+                        I like to make myself useful and help out wherever needed!
                         I've stayed in 10 host families across 5 different countries
                         (US, Costa Rica, France, Mexico, Canada). When I'm not in school,
                         you can find me traveling for a cause: volunteering at organic farms,
@@ -95,7 +95,7 @@
                         and organizer in team projects. I value every connection and always follow
                         up and stay in touch. I mean, that's literally my major~
                     </p>
-                <p class="bold mt big text-2">I'm a time manager</p>
+                <p class="bold mt big text-2">I'm a time manager.</p>
                 <p class="text">
                     Time management is my jam! I value time down to minutes and like seeing
                     the "impossible" planning happen. I once found myself in 3 different communities
