--- a/project-one.html
+++ b/project-one.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      <!-- stylesheet -->
-     <link rel="stylesheet" href="/css/style.css">
+     <link rel="stylesheet" href="css/style.css">
      <!-- font awesome -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 
@@ -15,7 +15,7 @@
     <!-- header section -->
     <section class="header-section container">
         <div class="mt-1">
-            <a class="back" href="/home.html">
+            <a class="back" href="home.html">
                 <i class="fas fa-arrow-left"></i>
                 <p>back to home</p>
             </a>
@@ -38,13 +38,13 @@
             <div class="image mt-2">
               <!--double check to see if the link works-->
               <a href="explorate.world">
-                <img src="/img/explorate.svg" alt="explorate">
+                <img src="img/explorate.svg" alt="explorate">
               </a>
             </div>
             <div class="image mt-2">
               <!--double check to see if the link works-->
               <a href="https://explorate.world/about">
-                <img src="/img/services.svg" alt="explorate services">
+                <img src="img/services.svg" alt="explorate services">
               </a>
             </div>
         </div>
@@ -78,7 +78,7 @@
                     </li>
                 </ul>
             </div>
-            <img src="/img/garage.svg" alt="garage northwestern">
+            <img src="img/garage.svg" alt="garage northwestern" style="margin-left: 28%;">
         </div>
             <ul>
                 <li>
@@ -99,13 +99,13 @@
                         talent recruitment
                     </p>
                 </li>
-                <li>
+<!--                <li>
                     <h3>Special thanks to</h3>
                     <p class="p-l-1">Judy Lubin and the garage propel and residency programs for mentorship & my
                         amazing team members Linus Okoth and Adala Makhulo
                     </p>
                 </li>
-            </ul>
+ -->            </ul>
         </div>
     </section>
 
@@ -119,17 +119,14 @@
     </section>
 
     <section class="here-section container">
+		<img style="width: 50%;margin-top: 5%; margin-bottom: 5%;" src="img/tree.png" />
         <p>
           When I was 16, I thought I found the perfect volunteering experience – saving sea turtles in Costa Rica! The program seemed to have everything I wanted, including unique jungle housing, time spent closely examining and saving sea turtles, exciting surf excursions, and a guaranteed team coordinator who would help me navigate a foreign land and new experiences. But my experience was nothing like what I had imagined. On top of an uninterested coordinator and crowded, bug-filled housing, I only got to spend 10 minutes (in 20 days!) monitoring the sea turtles. I returned home, disappointed, but not disheartened.
 
-          Hoping to redeem Costa Rica, I left for a similar excursion to Ecuador. This trip promised time cultivating indigenous plant species and encouraging natural bird behavior to maintain the biodiversity of the
-          Galapagos Islands. Despite having done extensive research this time, I was, again, disappointed. No cell service, no coordinator within reach and, instead of maintaining the fragile ecosystem, I spent most days
-          peeling coffee beans in the kitchen.
+          Hoping to redeem Costa Rica, I left for a similar excursion to Ecuador. This trip promised time cultivating indigenous plant species and encouraging natural bird behavior to maintain the biodiversity of the Galapagos Islands. <br><br>Despite having done extensive research this time, I was, again, disappointed. No cell service, no coordinator within reach and, instead of maintaining the fragile ecosystem, I spent most days peeling coffee beans in the kitchen.
 
-          Returning home, I was frustrated by the misrepresentation of both trips. My passion for volunteering remained, but how could I go on another trip like these two? If only I had known more beforehand, I could
-          have chosen better, and been better prepared when I arrived. If only I was in contact with people who had gone before me instead of feeling like I’m alone on my own path, these trips could have been the
-          excursions of a lifetime! I couldn’t let anyone else make the same mistakes I did. So, I turned the “if only’s” into one simple word: Explorate."
-
+          Returning home, I was frustrated by the misrepresentation of both trips. My passion for volunteering remained, but how could I go on another trip like these two? If only I had known more beforehand, I could have chosen better, and been better prepared when I arrived. If only I was in contact with people who had gone before me instead of feeling like I’m alone on my own path, these trips could have been the excursions of a lifetime! I couldn’t let anyone else make the same mistakes I did. So, I turned the “if only’s” into one simple word: Explorate."
+<br /><br /><br />
         </p>
     </section>
 
@@ -158,12 +155,16 @@
      <section class="here-images mt-2">
         <div class="images-flex">
             <div class="mt-2">
-                <img src="/img/interview.svg" alt="Explorate user interview insights">
-                <p>User interview insights</p>
+				<a href="https://miro.com/app/board/o9J_khmmHlE=/" target="_blank">
+					<img src="img/interview.svg" alt="Explorate user interview insights">
+					<p class="text-center">User interview insights</p>
+				</a>
             </div>
             <div class="mt-2">
-                <img src="/img/ngo.svg" alt="NGO painpoints">
-                <p> NGO painpoints </p>
+				<a href="https://miro.com/app/board/o9J_kgLRi2U=/" target="_blank">
+					<img src="img/ngo.svg" alt="NGO painpoints">
+					<p class="text-center"> NGO painpoints </p>
+				</a>
             </div>
         </div>
     </section>
@@ -174,11 +175,11 @@
     <section class="strategic-section container">
         <h2 class="bold">Strategic planning</h2>
         <div class="strategic">
-            <img src="/img/strategic.svg" alt="strategic planning">
+            <img src="img/strategic.svg" alt="strategic planning">
         </div>
         <h3>User affinities</h3>
         <div class="demographics">
-            <img src="/img/demographics.svg" alt="demographics">
+            <img src="img/demographics.svg" alt="demographics">
         </div>
         <h3>User archetype</h3>
     </section>
@@ -192,27 +193,26 @@
             <h2 class="bold container">Prototype testing</h2>
             <h3 class="container mt-2">Review</h3>
             <div class="testing">
-                <img src="/img/review.svg" alt="review">
+                <img src="img/review.svg" alt="review">
             </div>
-            <p>I provided 3 options for users to choose from to best design the <br>display of review. Many favored the last option.  </p>
+            <!-- <p>I provided 3 options for users to choose from to best design the display of review. Many favored the last option.  </p> -->
 
-            <p>I provided 3 options for users to choose from to best design the
-              <br>display of the review, which is one of the main sections of my website.
-              <br>Many favored the last option because they liked having the options to see comments
-              <br>about specific parts of the experience (ex. accomodation) in a more organized format with the drop-down button.
+            <p>I provided 3 options for users to choose from to best design the display of the review, which is one of the main sections of my website.
+              Many favored the last option because they liked having the options to see comments
+              about specific parts of the experience (ex. accomodation) in a more organized format with the drop-down button.
             </p>
         </div>
 
         <div>
             <h3 class="container mt-2">Connect</h3>
             <div class="testing">
-                <img src="/img/conect.svg" alt="connect">
+                <img src="img/conect.svg" alt="connect">
             </div>
             <p>I showed users in this demo how they would be able to connect with
-              <br>one another and asked whether they would be interested in using this feature.
-              <br>All of them gave positive feedback! Therefore, aside from making it
-              <br>a one-way interaction of reviews, I aim to build two-way connections
-              <br>within the international volunteering community and make the experience less dauting.
+              one another and asked whether they would be interested in using this feature.
+              All of them gave positive feedback! Therefore, aside from making it
+              a one-way interaction of reviews, I aim to build two-way connections
+              within the international volunteering community and make the experience less dauting.
             </p>
 
         </div>
@@ -220,11 +220,11 @@
         <div>
             <h3 class="container mt-2">Filter & search</h3>
             <div class="testing">
-                <img src="/img/filter.svg" alt="review">
+                <img src="img/filter.svg" alt="review">
             </div>
             <p>I tested whether users would prefer less or more options when they search.
-              <br>Most would like fewer options to start the search with and have more options
-              <br>in the filter available when browsing. </p>
+              Most would like fewer options to start the search with and have more options
+              in the filter available when browsing. </p><br /><br /><br />
         </div>
 
     </section>
@@ -233,18 +233,30 @@
 
     <div class="yellow-2 mt-3"></div>
 
+    <section class="prototype-section">
+        <h2 class="container bold">Prototype design</h2>
+		<iframe style="border: 1px solid rgba(0, 0, 0, 0.1); margin-left: 5%; margin-top: 2%;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F2TXIwEmheCk8DuPvTKBt2d%2FExplorate-share%3Fnode-id%3D1%253A376%26scaling%3Dscale-down-width" allowfullscreen>
+			
+		</iframe><br /><br /><br /><br />
+
+    </section>
+
+    <!-- competitive analysis -->
+
+    <div class="yellow-2 mt-3"></div>
+
     <section class="competitive-section">
-        <h2 class="container">Competitive analysis</h2>
+        <h2 class="container bold">Competitive analysis</h2>
 
         <div class="competitive container">
-            <img src="/img/overses.svg" alt="overseas">
-            <img src="/img/world.svg" alt="world">
+            <img src="img/overses.svg" alt="overseas">
+            <img src="img/world.svg" alt="world">
         </div>
         <div class="competitive-text container mt-2">
             <h3>After comparing with the two leading organizations in international volunteering, I claimed our niche in:</h3>
             <p class="mt">  ✅  Focus on forming communities</p>
             <p class="mt">  ✅  Pledge to focus on meaningful volunteering opportunities and design alternatives to voluntourism (mainly focus on alternative livelihood programs)</p>
-            <p>  ✅  We care about communities beyond international volunteers, specifically the communities that volunteers are devoting their time to</p>
+            <p>  ✅  We care about communities beyond international volunteers, specifically the communities that volunteers are devoting their time to</p><br /><br />
         </div>
 
     </section>
@@ -252,13 +264,13 @@
     <!-- Footer -->
 
     <footer class="navigator">
-        <a href="/project-three.html">
+        <a href="project-three.html">
             <div>
                 <i class="fas fa-arrow-left"></i>
                 <p class="bold">Storybytes</p>
             </div>
         </a>
-        <a href="/project-two.html">
+        <a href="project-two.html">
             <div>
                 <p class="bold">Goalbud</p>
                 <i class="fas fa-arrow-right icon"></i>
