--- a/project-three.html
+++ b/project-three.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 
@@ -16,7 +16,7 @@
    <section class="header-section container">
 
         <div class="mt-1">
-            <a class="back" href="/home.html">
+            <a class="back" href="home.html">
                 <i class="fas fa-arrow-left"></i>
                 <p>back to home</p>
             </a>
@@ -53,7 +53,7 @@
                     </li>
                 </ul>
             </div>
-            <img src="/img/knight.svg" alt="garage northwestern">
+            <img src="img/knight.svg" alt="garage northwestern">
         </div>
             <ul>
                 <li>
@@ -88,7 +88,7 @@
                         As the open-web continues to die, storytellers need tools that can create quick sharable artifacts to visualize their stories <br>for a variety of social networks and platforms.
                     </h4>
                     <div>
-                        <img class="mt-2" src="/img/knightproblem.svg" alt="problem one">
+                        <img class="mt-2" src="img/knightproblem.svg" alt="problem one">
                     </div>
                     <p class="bold m text-center">
                         Visual news stories often lack efficient storytelling and are platform-locked. It can often be time consuming and potentially frustrating for journalists when they have to create different posts for different platforms.
@@ -119,10 +119,10 @@
 
         <div class="process-images mt-2">
             <div>
-                <img src="/img/knighr2.svg" alt="image">
+                <img src="img/knighr2.svg" alt="image">
             </div>
             <div>
-                <img src="/img/knight1.svg" alt="image">
+                <img src="img/knight1.svg" alt="image">
             </div>
         </div>
 
@@ -132,19 +132,19 @@
 
         <div class="knight-images mt-2">
             <div>
-                <img src="/img/knightimage1.svg" alt="image1">
+                <img src="img/knightimage1.svg" alt="image1">
             </div>
             <div>
-                <img src="/img/knightimage2.svg" alt="image1">
+                <img src="img/knightimage2.svg" alt="image1">
             </div>
             <div>
-                <img src="/img/knightimage3.svg" alt="image1">
+                <img src="img/knightimage3.svg" alt="image1">
             </div>
             <div>
-                <img src="/img/knightimage4.svg" alt="image1">
+                <img src="img/knightimage4.svg" alt="image1">
             </div>
             <div>
-                <img src="/img/knightimage5.svg" alt="image1">
+                <img src="img/knightimage5.svg" alt="image1">
             </div>
         </div>
         <p class="bold text-center">Onboarding design of StoryBytes</p>
@@ -157,7 +157,7 @@
     <section class="solution-section container">
         <h3 class="bold mt-up">Solution</h3>
         <div class="mt-2">
-            <img src="/img/solution-image.svg" alt="solution">
+            <img src="img/solution-image.svg" alt="solution">
             <h3>VIDEO/PROTOTYPE</h3>
         </div>
         <h2 class="mt-2" ><a href="https://drive.google.com/drive/u/0/folders/1rG1iQzfdIPDg5Duc22Seh1UQG18ztbFi" target="blank">
@@ -168,13 +168,13 @@
     <!-- Footer -->
 
     <footer class="navigator">
-        <a href="/project-two.html">
+        <a href="project-two.html">
             <div>
                 <i class="fas fa-arrow-left"></i>
                 <p class="bold">Goalbud</p>
             </div>
         </a>
-        <a href="/project-one.html">
+        <a href="project-one.html">
             <div>
                 <p class="bold">Explorate</p>
                 <i class="fas fa-arrow-right icon"></i>
