--- a/project-two.html
+++ b/project-two.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!-- stylesheet -->
-     <link rel="stylesheet" href="/css/style.css">
+     <link rel="stylesheet" href="css/style.css">
      <!-- font awesome -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 
@@ -14,7 +14,7 @@
     <!-- header section -->
     <section class="header-section container">
         <div class="mt-1">
-            <a class="back" href="/home.html">
+            <a class="back" href="home.html">
                 <i class="fas fa-arrow-left"></i>
                 <p>back to home</p>
             </a>
@@ -62,7 +62,7 @@
                     </li>
                 </ul>
             </div>
-            <img src="/img/northwestern.svg" alt="garage northwestern">
+            <img src="img/northwestern.svg" alt="garage northwestern">
         </div>
             <ul>
                 <li>
@@ -96,7 +96,7 @@
                 <li>
                     <h3>1. <span>Due to Covid, general social interaction is less frequent than usual. It’s hard enough to make a connection, let along make a connection long term</span></h3>
                     <div>
-                        <img src="/img/problem1.svg" alt="problem one">
+                        <img src="img/problem1.svg" alt="problem one">
                     </div>
                     <p>*I asked for permission to use these photos publicly</p>
                 </li>
@@ -105,7 +105,7 @@
                     <h3 class="mt-2">2. <span>Virtual interaction is awkward - People are separated by a screen barrier and no amount of time on zoom retracts this awkwardness.</span></h3>
 
                     <div>
-                        <img src="/img/problem2.svg" alt="problem one">
+                        <img src="img/problem2.svg" alt="problem one">
                     </div>
                     <p>*I asked for permission to use these photos publicly</p>
                 </li>
@@ -113,7 +113,7 @@
                     <h3 class="mt-2">3. <span>Virtual interaction works best when participating in shared activities (games, school, lunch, class)</span>
                     </h3>
                     <div>
-                        <img src="/img/problem3.svg" alt="problem one">
+                        <img src="img/problem3.svg" alt="problem one">
                     </div>
                     <p>*I asked for permission to use these photos publicly</p>
                 </li>
@@ -129,12 +129,12 @@
 
         <div class="process-content">
             <div class="mt-2">
-                <img src="/img/process1.svg" alt="insight">
+                <img src="img/process1.svg" alt="insight">
                 <p> Insight synthesis from interviewers</p>
                 <!-- <p class="mt-2">Insight synthesis from interviewers</p> -->
             </div>
             <div class="mt-2">
-                <img src="/img/process2.svg" alt="braintstorm">
+                <img src="img/process2.svg" alt="braintstorm">
                 <p>The initial brainstorm</p>
                 <!-- <p class="mt-2">The initial brainstorm</p> -->
             </div>
@@ -152,12 +152,12 @@
         <div class="solution-images">
             <div>
               <a href = "https://www.figma.com/proto/OfFDdFeQzkGgqlRhAmlyTR/Wireframing-Copy?node-id=270469%3A449&scaling=min-zoom">
-                <img src="/img/goalbud.svg" alt="goalbud">
+                <img src="img/goalbud.svg" alt="goalbud">
               </a>
             </div>
             <div>
               <a href = "https://www.youtube.com/watch?v=4gqHQrjjmBE&feature=emb_logo">
-                <img src="/img/people.svg" alt="goalbud people">
+                <img src="img/people.svg" alt="goalbud people">
               </a>
             </div>
         </div>
@@ -167,13 +167,13 @@
      <!-- Footer -->
 
      <footer class="navigator">
-         <a href="/project-one.html">
+         <a href="project-one.html">
             <div>
                 <i class="fas fa-arrow-left"></i>
                 <p class="bold">Explorate</p>
             </div>
         </a>
-        <a href="/project-three.html">
+        <a href="project-three.html">
             <div>
                 <p class="bold">Storybytes</p>
                 <i class="fas fa-arrow-right icon"></i>
