--- a/home.html
+++ b/home.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/animation.css">
+	
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 
@@ -18,9 +20,9 @@
             <h3>I'm Sherry Xue</h3>
             <nav>
                 <ul>
-                    <li><a class="link" href="/about.html">About Me </a></li>
+                    <li><a class="link" href="about.html">About Me </a></li>
                     <li><a class="link" href="#projects">Projects</a></li>
-                    <li><a class="link" href="Sherryresume.pdf" target="_blank">CV</a></li>
+                    <li><a class="link" href="Sherry_xue_resume.pdf" target="_blank">Resume</a></li>
 
                 </ul>
             </nav>
@@ -29,20 +31,22 @@
     <!-- Header section -->
     <section class="container">
         <div>
-            <p>A <span class="yellow-back">sophomore</span> at Northwestern University</p>
+            <p>A <span class="yellow-back">junior</span> at Northwestern University</p>
             <p>Majoring in <span class="yellow-back">Communication Studies</span></p>
             <p>Minoring in <span class="yellow-back">Enterprenuership, French, Data Science</span></p>
             <p>Certificates in <span class="yellow-back">Marketing</span> & <span class="yellow-back">Design</span></p>
         </div>
         <!--This part will most likely/ totally need a fix in the font style..feel free to play with it-->
-        <div class="container landing grid">
-            <div class="showcase-text mt-2">
-                <h3>Hong
+        <div class="container landing grid fade-in" >
+            <div class="showcase-text mt-2" style="padding-left: 20%;padding-top: 22%;">
+                <h3 style="font-size: 450%;">Hong
                   <br>(Sherry)
                   <br>Xue
-                  <br><span class="bolder yellow-back">Entrepreneur</span> &
-                  <br><span class="bolder yellow-back">Human-centered designer</span>
-                </p>
+                </h3>
+				<div style="font-size: 200%;">
+					<br><span class="bolder yellow-back">Entrepreneur</span> &
+					<br><span class="bolder yellow-back">Human-centered designer</span>
+				</div>
             </div>
             <div class="showcase-img mt-2">
                 <img src="./img/sherry.png" alt="sherry xue">
@@ -62,29 +66,35 @@
     <!-- work section -->
     <section class=" work--section container">
         <div class="grid grid-3">
-            <a href="/project-one.html" class="mt-1">
+            <a href="project-one.html" class="mt-1">
                 <div class="card">
-                    <div class="work-image">
-                        <img src="./img/project1.svg" alt="project-1">
+                    <div >
+                        <!-- <img class="work-image" src="./img/project1.svg" alt="project-1"> -->
+						<img class="work-image" src="./img/3.png" alt="project-1">
+						<span class="yellow-back f130">#1. My passion in a startup</span>
                     </div>
 
                     <h3>Explorate</h3>
                     <p>Enterprenuership</p>
                 </div>
             </a>
-            <a href="/project-two.html" class="mt-1">
+            <a href="project-two.html" class="mt-1">
                 <div class="card">
-                    <div class="work-image">
-                        <img class="work-image" src="./img/project2.svg" alt="project-2">
+                    <div >
+                        <!-- <img class="work-image" src="./img/project2.svg" alt="project-2"> -->
+						<img class="work-image" src="./img/2.png" alt="project-2">
+						<span class="yellow-back f130">#2. Design thinking approach</span>
                     </div>
                     <h3>Goalbud</h3>
                     <p>Service Design</p>
                 </div>
             </a>
-            <a href="/project-three.html" class="mt-1">
+            <a href="project-three.html" class="mt-1">
                 <div class="card">
-                    <div class="work-image">
-                        <img class="work-image" src="./img/project3.svg" alt="project-3">
+                    <div >
+                        <img class="work-image" src="./img/1.png" alt="project-3">
+						<span class="yellow-back f130">#3. Media + Design</span>
+						<!-- <img class="work-image" src="./img/project3.svg" alt="project-3"> -->
                     </div>
                     <h3>Storybytes</h3>
                     <p>Service Design</p>
