--- a/project-one.html
+++ b/project-one.html
@@ -37,7 +37,7 @@
         <div class="images container">
             <div class="image mt-2">
               <!--double check to see if the link works-->
-              <a href="explorate.world">
+              <a href="https://explorate.world/" target="blank">
                 <img src="img/explorate.svg" alt="explorate">
               </a>
             </div>
