--- a/home.html
+++ b/home.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta property="og:image" content="img/carryingturtle"/>
+
+    <meta property="og:description" content="Entrepreneur & Human-centered designer" />
+
+    <meta property="og:url"content="https://www.sherryxue.com/" />
+
+    <meta property="og:title" content="Hong (Sherry) Xue" />
+
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/animation.css">
