--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:image" content="img/carryingturtle"/>
+    <meta property="og:image" content="https://ibb.co/ScKhksG"/>
 
     <meta property="og:description" content="Entrepreneur & Human-centered designer" />
 
     <meta property="og:url"content="https://www.sherryxue.com/" />
 
-    <meta property="og:title" content="Hong (Sherry) Xue" />
+    <meta property="og:title" content="Sherry Xue Portfolio" />
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
