--- a/project-three.html
+++ b/project-three.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+     <!-- facebook -->
+     <meta property="og:type" content="website">
+     <meta property="og:image" content="https://i.ibb.co/P6bSsHC/Carryingturtle.jpg"/>
+     <meta property="og:description" content="Entrepreneur & Human-centered designer" />
+     <meta property="og:url"content="https://www.sherryxue.com/" />
+     <meta property="og:title" content="Sherry Xue Portfolio" />
+ 
+ 
+     <!-- twitter -->
+     <meta property="twitter:card" content="summary_large_image">
+     <meta property="twitter:url" content="https://www.sherryxue.com">
+     <meta property="twitter:title" content="Sherry Xue Portfolio">
+     <meta property="twitter:description" content="I hope to improve your insights on many things through my platforms. Any complaints, feedback or ideas can be shared whatsoever, except for insults.">
+     <meta property="twitter:image" content="https://i.ibb.co/P6bSsHC/Carryingturtle.jpg">
+ 
+ 
+
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <!-- font awesome -->
