--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                 <ul>
                     <li><a class="link" href="home.html">Home </a></li>
                     <li><a class="link" href="home.html#projects">Projects</a></li>
-                    <li><a class="link" href="Sherry_xue_resume.pdf" target="_blank">Resume</a></li>
+                    <li><a class="link" href="Sherryresume.pdf" target="_blank">Resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -91,7 +91,7 @@
                 <img src="./img/IMG_2250.jpeg" alt="about image">
                 <h3 class="text-center">Thank you for stopping by!</h3>
                 <h3 class="text-center">Lets connect!</h3>
-                <a href="Sherry_xue_resume.pdf" target="_blank">View Resume</a>
+                <a href="Sherryresume.pdf" target="_blank">View Resume</a>
             </div>
 
             <div class="about-me-text">
