--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
                 <ul>
                     <li><a class="link" href="about.html">About Me </a></li>
                     <li><a class="link" href="#projects">Projects</a></li>
-                    <li><a class="link" href="Sherry_xue_resume.pdf" target="_blank">Resume</a></li>
+                    <li><a class="link" href="Sherryresume.pdf" target="_blank">Resume</a></li>
 
                 </ul>
             </nav>
